[gd_scene load_steps=4 format=2]

[ext_resource path="res://well_prepared sucai/NPC/interact.png" type="Texture" id=1]
[ext_resource path="res://NPC/NPC.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 33.0

[node name="NPC" type="StaticBody2D"]
pause_mode = 1
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="shadow" type="Sprite" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 1.19209e-07, -20 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
